Overflow bug

--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body
 {
 	overflow: hidden;
 	background-color: #ffffed;
-
-	overflow: hidden;
 }
 
 	main
@@ -33,8 +31,6 @@ body
 		overflow-y: auto;
 
 		position: relative;
-
-		overflow: hidden;
 	}
 
 		/*
@@ -53,8 +49,6 @@ body
 			overflow: hidden;
 
 			z-index: 1;
-
-			overflow: hidden;
 		}
 
 			main #myOffice img#logo
